openfhe boostrap implementation

--- a/openfhe/code/liniar_regression/lr_trained_on_encrypted_data.ipynb
+++ b/openfhe/code/liniar_regression/lr_trained_on_encrypted_data.ipynb
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "31b8a8b667da5a02",
    "metadata": {
     "ExecuteTime": {
@@ -937,7 +937,7 @@
     }
    ],
    "source": [
-    "r2_clear,mse= metrics_on_clear_data(model,x_train[:700], y_train[:700])"
+    "r2_clear,mse= metrics_on_clear_data(model,x_test[:700], y_test[:700])"
    ]
   },
   {
