--- a/OpenFHE/code/liniar_regression/lr_trained_on_clear_data.ipynb
+++ b/OpenFHE/code/liniar_regression/lr_trained_on_clear_data.ipynb
@@ -141,6 +141,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f3668441",
+   "metadata": {},
+   "source": [
+    "algoritm preluat din documentatia oficiala https://docs.pytorch.org/docs/stable/generated/torch.optim.SGD.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "2d13636d",
