--- a/Zama-ConcreteML/code/liniar_regression/liniarreg.ipynb
+++ b/Zama-ConcreteML/code/liniar_regression/liniarreg.ipynb
@@ -245,6 +245,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "791b466e",
+   "metadata": {},
+   "source": [
+    "portiuni mici din cod sunt inspirate din exemplele oferite de Zama https://github.com/zama-ai/concrete-ml/blob/main/docs/advanced_examples/LinearRegression.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "9bd67a11804e2fa9",
