--- a/Zama-ConcreteML/code/logistic_regression/logreg.ipynb
+++ b/Zama-ConcreteML/code/logistic_regression/logreg.ipynb
@@ -439,6 +439,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "65ab31cd",
+   "metadata": {},
+   "source": [
+    "portiune de cod inspirata din exemplele oferite de Zama https://github.com/zama-ai/concrete-ml/blob/main/docs/advanced_examples/LogisticRegressionTraining.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "23b5cfb3",
